--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>牛牛宇宙第一帅</h1>
-</body>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="stylesheet" href="css/main.css" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<title>V2X-Team随机选人</title>
+	</head>
+	<body>
+		<div class="random">
+			<ul class="names"></ul>
+			<script type="text/javascript" src="js/classmates.js"></script>
+			<div class="botton-container">
+				<button class="start botton" type="button">开始</button>
+				<div class="txt">
+					<span class="tips">天选之子：</span>
+					<span class="select-name">敬请期待！</span>
+				</div>
+				<button class="stop botton" type="button">停止</button>
+			</div>
+		</div>
+		<script src="js/funtion.js" type="text/javascript"></script>
+	</body>
 </html>
