--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<link rel="stylesheet" href="css/main.css" />
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>V2X-Team随机选人</title>
-	</head>
-	<body>
-		<div class="random">
-			<ul class="names"></ul>
-			<script type="text/javascript" src="js/classmates.js"></script>
-			<div class="botton-container">
-				<button class="start botton" type="button">开始</button>
-				<div class="txt">
-					<span class="tips">天选之子：</span>
-					<span class="select-name">敬请期待！</span>
-				</div>
-				<button class="stop botton" type="button">停止</button>
-			</div>
-		</div>
-		<script src="js/funtion.js" type="text/javascript"></script>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/index.css" >
+</head>
+<body>
+    <h1>牛牛最帅</h1>
+    <div id="one">
+        <ul>
+            <li>111</li>                    <!--无序列表-->
+            <li>11111</li>
+            <li>1111</li>
+            <li>2222</li>
+        </ul>   
+        <ol>
+            <li>a111</li>                    <!--有序列表-->
+            <li>a222</li>                 
+            <li>a3a33</li>
+        </ol>
+    </div>
+ 
+</body>
 </html>
