--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/index.css" >
+    <link href="/css/index.css"rel="stylesheet"type="text/css">
 </head>
 <body>
     <h1>牛牛最帅</h1>
@@ -14,7 +14,7 @@
             <li>111</li>                    <!--无序列表-->
             <li>11111</li>
             <li>1111</li>
-            <li>2222</li>
+            <li>2222</li> 
         </ul>   
         <ol>
             <li>a111</li>                    <!--有序列表-->
