--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
     <link href="/css/index1.css"rel="stylesheet"type="text/css">
 </head>
+<style>
+    #one{
+    background-color: aqua;
+}
+body{
+    background-color: rebeccapurple;
+    font-family: 华文行楷;
+    font-size: 50px;
+}
+</style>
 <body>
     <h1>牛牛最帅</h1>
     <div id="one">
